# api

./: Cargo.toml  mod.rs  testing.py  todo.txt
database/: create.sh  database.sqlite
src/: catchers.rs  main.rs
src/routes/: mod.rs
src/routes/auth/: edit_pwd.rs  login.rs  mod.rs  signin.rs
src/routes/list/: delete.rs  mod.rs  post.rs  put.rs
src/routes/project/: delete.rs  get.rs  get_mines.rs  kick.rs  mod.rs  post.rs  put.rs
src/routes/task/: delete.rs  mod.rs  post.rs  put.rs  update_state.rs
src/routes/user/: delete.rs  get.rs  mod.rs  put.rs
