[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.3", features = ["json"]}
rocket_contrib = { version = "0.4.1", features = ["json"] }
rusqlite = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15.0"
sha2 = "0.10.7"
rand = "0.8.5"
lazy_static = "1.4"
r2d2 = "0.8"
r2d2_sqlite = "0.22"